Prep output of diagram construction for terrain generation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 
+add_subdirectory(external/delaunator-cpp)
 add_library(mapgen
         src/FortuneAlgorithm.cpp
         src/Terrain.cpp)
 target_link_libraries(mapgen fmt utils engine glm)
 target_include_directories(mapgen
-        PRIVATE ${CMAKE_SOURCE_DIR}/external/delaunator-cpp/include
+        PRIVATE external/delaunator-cpp/include
         PUBLIC include)
