--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(external/delaunator-cpp)
 add_library(mapgen
         src/FortuneAlgorithm.cpp
         src/Terrain.cpp)
-target_link_libraries(mapgen fmt utils engine glm)
+target_link_libraries(mapgen EnTT fmt utils engine glm)
 target_include_directories(mapgen
         PRIVATE external/delaunator-cpp/include
         PUBLIC include)
