Separate my personal shitty FortuneAlgorithm implementation from the beautiful simplicity of Delaunator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.16)
 add_subdirectory(external/delaunator-cpp)
 add_library(mapgen
         src/FortuneAlgorithm.cpp
-        src/Terrain.cpp)
+        src/Terrain.cpp
+        src/DelaunatorAlgorithm.cpp)
 target_link_libraries(mapgen EnTT fmt utils engine glm)
 target_include_directories(mapgen
         PRIVATE external/delaunator-cpp/include
